# wsq2jpeg

./: CMakeLists.txt  README.md
include/: image.h  utils.h
src/: image.cpp  mainj.cpp  mainw.cpp  test_jpeg.cpp  test_wsq.cpp  utils.cpp  wsq2jpeg.cpp
test/: a011_02.wsq  a011_03.wsq  a011_04.wsq
